# gcn10py

./: .gitignore  README.md  pyproject.toml
src/gcn10py/: __init__.py  cli.py  gcn10
testing/: aoi.gpkg
testing/landcover/: esa_worldcover_2021.vrt
testing/shps/: esa_extent_blocks.dbf  esa_extent_blocks.shp  esa_extent_blocks.shx
