[project]
name = "gcn10py"
version = "0.1.0"
description = "Python interface to the parallelized gcn10 executable for curve number generation"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []
keywords = ["curve-number", "gcn10", "geospatial", "hydrology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mabdazzam/gcn10py"
Repository = "https://github.com/mabdazzam/gcn10py"
Documentation = "https://github.com/mabdazzam/gcn10py/wiki"

[project.scripts]
gcn10py = "gcn10py.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcn10py"]
include = ["src/gcn10py/gcn10", "src/gcn10py/gcn10.exe"]
